WATSON-6: Stylize input fields and fix overflow issues

--- a/src/components/CpuConsumers/CpuConsumersList.css
+++ b/src/components/CpuConsumers/CpuConsumersList.css
@@ -6,10 +6,18 @@
   flex-direction: column;
   align-items: flex-start;
 }
+.consumers-list h6 {
+  width: 100%;
+  margin-top: 5px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
 .cpu-usage {
   cursor: pointer;
 }
 .cpu-usage:hover {
   color: #0052CC;
+  text-decoration: underline;
 }
