--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,22 @@ h6 {
   margin-top: 16px;
   margin-bottom: 0;
 }
+
+input {
+  color: #172B4D;
+  border: 1px solid #c1c7d0;
+  border-radius: 3px;
+  box-sizing: border-box;
+  font-size: inherit;
+  margin: 0;
+  vertical-align: baseline;
+  padding: 4px 5px;
+  margin-right: 4px;
+}
+input[type="number"], input[type="text"] {
+  height: 2.14285714em;
+  line-height: 1.4285714285714;
+}
+input:focus {
+  border-color: #5897fb;
+}
